2015-05-03  Natalia Portillo  <claunia@claunia.com>

	* Claunia.IO.csproj:
	* Interop/FreeBSD/Interop.FreeBSD.types.cs:
	* Interop/FreeBSD/Interop.FreeBSD.statfs.cs:
	  Implement FreeBSD's statfs(2).

2015-05-03  Natalia Portillo  <claunia@claunia.com>

	* Claunia.IO.csproj:
	* Interop/FreeBSD/Interop.FreeBSD.stat.cs:
	* Interop/FreeBSD/Interop.FreeBSD.types.cs:
	  Implement FreeBSD's stat(2).

2015-05-03  Natalia Portillo  <claunia@claunia.com>

	* Interop/Linux/Interop.Linux.stat.cs:
	  Manpages are in octal, corrected typo.

2015-05-03  Natalia Portillo  <claunia@claunia.com>

	* Claunia.IO.csproj:
	* Interop/FreeBSD/Interop.FreeBSD.uname.cs:
	  Implement FreeBSD's uname(3)

2015-05-03  Natalia Portillo  <claunia@claunia.com>

	* Claunia.IO.csproj:
	* Interop/FreeBSD/Interop.FreeBSD.Errors.cs:
	* Interop/FreeBSD/Interop.FreeBSD.Libraries.cs:
	  Add FreeBSD libc and errno.

2015-05-03  Natalia Portillo  <claunia@claunia.com>

	* Claunia.IO.csproj:
	* Interop/Linux/Interop.Linux.stat.cs:
	* Interop/Linux/Interop.Linux.types.cs:
	  Implemented Linux's stat(2).

2015-05-03  Natalia Portillo  <claunia@claunia.com>

	* Interop/Linux/Interop.Linux.types.cs:
	* Interop/Linux/Interop.Linux.statfs.cs:
	  Add statfs(2) f_flags enumeration.

2015-05-03  Natalia Portillo  <claunia@claunia.com>

	* Claunia.IO.csproj:
	* Interop/Linux/Interop.Linux.types.cs:
	* Interop/Linux/Interop.Linux.statfs.cs:
	  Implement Linux statfs(2).

2015-04-26  Natalia Portillo  <claunia@claunia.com>

	* Claunia.IO.csproj:
	* Interop/Linux/Interop.Linux.xattr.cs:
	  Implement Linux's listxattr(2), getxattr(2), setxattr(2),
	  removexattr(2)

2015-04-26  Natalia Portillo  <claunia@claunia.com>

	* Interop/Apple/Interop.Apple.statfs.cs:
	  Correct documentation.

2015-04-26  Natalia Portillo  <claunia@claunia.com>

	* Interop/Linux/Interop.Linux.uname.cs:
	  Un-hardcode library name.

2015-04-26  Natalia Portillo  <claunia@claunia.com>

	* Interop/Apple/Interop.Apple.xattr.cs:
	  Correct typos.
